# battle-vision-overlay

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md
docs/: architecture.md  roadmap.md
engine-go/: go.mod
engine-go/cmd/overlay-api/: main.go  main_test.go
engine-go/internal/master/: master.go  master_test.go
engine-go/internal/overlay/: preview.go  preview_test.go
engine-go/internal/speed/: speed.go  (+1 more)
overlay-ui/samples/: overlay_sample.json  overlay_sample_error.json  overlay_sample_ok.json  overlay_sample_opponent_unknown.json  overlay_sample_player_unknown.json  overlay_sample_unknown.json
overlay-ui/web/: index.html  main.js  styles.css
schemas/: observation.schema.json  overlay.schema.json
shared/master-data/: pokemon.json
shared/player-config/: player_speed.json
vision-py/: pyproject.toml
vision-py/src/vision/: __init__.py  gender.py  main.py  metadata.py  name_match.py  name_ocr.py  observation.py  poc.py  tuning.py  validation.py
vision-py/src/vision/capture/: __init__.py  loader.py
vision-py/src/vision/debug/: __init__.py  crop_debug.py
vision-py/src/vision/dto/: __init__.py  observation.py  region.py
vision-py/src/vision/match/: __init__.py  pokemon.py
vision-py/src/vision/ocr/: __init__.py  engine.py  vision_ocr.swift
vision-py/src/vision/preprocess/: __init__.py  text.py
vision-py/src/vision/regions/: __init__.py  battle.py
vision-py/src/vision/transport/: __init__.py  client.py
vision-py/tests/: test_name_match.py  test_observation.py  test_region_crop.py  test_transport.py  test_validation.py
(+4 files in other folders)
